# agentic-langchain

./: .gitignore  AGENTS.md  README.md  pyproject.toml
1-Pydantic/: README.md  intro.ipynb
2-Langchain/: data_ingestion.ipynb  intro.ipynb  sample_document.txt  textsplitter.ipynb
